Fix projects layout in Portfolio section so that each project's image fits in and covers its div. Also, make slight alterations to skills div

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -68,6 +68,10 @@ section {
 	width: 100%;
 }
 
+.section-container {
+	width: 60%;
+}
+
 .margin-space-top {
 	margin-top: 80px;
 }
@@ -264,13 +268,14 @@ aside li {
 	display: flex;
 	justify-content: center;
 	background-color: #f7f7f4;
+	margin: 0 auto;
 	margin-bottom: 50px;
+	max-width: 680px;
 }
 
 .skills div {
 	text-align: center;
-	width: 180px;
-	height: 180px;
+	width: 200px;
 	background-color: #bfceb7;
 	margin: 10px;
 }
@@ -279,11 +284,8 @@ aside li {
 	padding: 0;
 }
 
-.skills div span {
-	color: white;
-}
-
 .skills div span .fas {
+	color: white;
 	font-size: 3em;
 	background-color: rgba(0,0,0, 0.7);
 	width: 1.5em;
@@ -295,10 +297,14 @@ aside li {
 }
 
 /* Portfolio Styles */
+.portfolio .section-container {
+	width: 80%;
+}
+
 .portfolio .projects-container {
 	display: flex;
 	flex-wrap: wrap;
-	/*width: 80%;*/
+	justify-content: center;
 }
 
 .portfolio .indv-project-container {
@@ -307,13 +313,18 @@ aside li {
 	margin:1%;
 	background-color: rgba(0,0,0, 0.7);
 	color: rgba(255,255,255, 1);
+	height: 300px;
+	max-width: 45%;
 }
 
-.portfolio .indv-project-container img {
-	width:100%;
+.portfolio .indv-project-container .img {
+	background-size: cover;
+	/*background-position: center;*/
+	height: 100%;
+	width: 100%;
 }
 
-.portfolio .indv-project-container:hover img {
+.portfolio .indv-project-container:hover .img {
 	opacity: 0.3;
 	filter: grayscale(100%);
 }
@@ -414,8 +425,4 @@ aside li {
 .flash-success{
 	color: green;
 	background-color: rgba(0,255,0, 0.1);
-}
-
-.section-container {
-	width: 80%;
 }
